--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -272,6 +272,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2838 entries, 0 to 2837\n",
+      "Columns: 116 entries, subreddit to sentiment\n",
+      "dtypes: float64(106), int64(6), object(4)\n",
+      "memory usage: 2.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 715 entries, 0 to 714\n",
+      "Columns: 116 entries, id to sentiment\n",
+      "dtypes: float64(107), int64(5), object(4)\n",
+      "memory usage: 648.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_test.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ptsd', 'assistance', 'relationships', 'survivorsofabuse',\n",
+       "       'domesticviolence', 'anxiety', 'homeless', 'stress',\n",
+       "       'almosthomeless', 'food_pantry'], dtype=object)"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['subreddit'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['relationships', 'anxiety', 'ptsd', 'assistance', 'homeless',\n",
+       "       'almosthomeless', 'domesticviolence', 'survivorsofabuse', 'stress',\n",
+       "       'food_pantry'], dtype=object)"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test['subreddit'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 145,
    "metadata": {},
    "outputs": [
